--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - run: echo "🍏 This job's status is ${{ job.status }}." > a.txt
+      - run: echo "<h1>hmm, is it</h1>" > index.html
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
