--- a/project/package.json
+++ b/project/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vite-tsconfig-paths": "^3.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.184",
