--- a/project/package.json
+++ b/project/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "npm run cleanup && tsc && vite build",
+    "preview": "vite preview",
+    "cleanup": "(rm ../index.html && rm -rf ../assets) || true"
   },
   "dependencies": {
     "lodash": "^4.17.21",
