--- a/project/package.json
+++ b/project/package.json
@@ -9,7 +9,10 @@
     "cleanup": "(rm ../index.html && rm -rf ../assets) || true"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
+    "postcss-nesting": "^10.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vite-tsconfig-paths": "^3.5.2"
@@ -20,6 +23,6 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^3.2.3"
   }
 }
