--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "immer": "^9.0.16",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "postcss-nesting": "^10.2.0",
