--- a/project/package.json
+++ b/project/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "type-fest": "^4.18.3",
     "typescript": "^5.2.2",
     "vite": "^3.2.3"
   }
